--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@ import {OrbitControls} from './threejs/OrbitControls.js';
 import {GLTFLoader} from './threejs/GLTFLoader.js';
 import {SkeletonUtils} from './threejs/SkeletonUtils.js';
 
+console.clear();
+
 
 var keyboard = {};
 
@@ -45,6 +47,8 @@ function main() {
   const controls = new OrbitControls(camera, canvas);
   controls.target.set(30, walker.height, 0);
   controls.update();
+
+ 
 
   const scene = new THREE.Scene();
   scene.background = new THREE.Color('grey');
@@ -116,6 +120,37 @@ function main() {
     // hide the loading bar
     const loadingElem = document.querySelector('#loading');
     loadingElem.style.display = 'none';
+
+     //Ikea sign
+     var loader = new THREE.TextureLoader();
+     var material = new THREE.MeshLambertMaterial({
+       map: loader.load('images/ikea.jpeg')
+       });
+       
+       var geometry = new THREE.PlaneGeometry(20, 10);
+       var mesh = new THREE.Mesh(geometry, material);
+       mesh.position.set(10,27,-135)
+       scene.add(mesh);
+
+     /* 
+  var textureLoader = new THREE.TextureLoader(manager);
+    crateTexture = textureLoader.load("images/ikea.jpeg");
+    crateBumpMap = textureLoader.load("images/ikea.jpeg");
+    crateNormalMap = textureLoader.load("images/ikea.jpeg")
+
+    crate = new THREE.Mesh(
+        new THREE.CylinderGeometry( 0.5, 0.5, 1.5, 35 ),
+        new THREE.MeshPhongMaterial( {
+            color: 0xffffff,
+            map:crateTexture,
+            bumpMap: crateBumpMap,
+            normalMap:crateNormalMap
+        })
+    );
+    
+    crate.position.set(-11,50,10);
+    crate.receiveShadow = true;
+    scene.add(crate); */
 
     //prepModelsAndAnimations();
 /* 
