--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ var signs= [];
        var mesh = new THREE.Mesh(geometry, material);
        mesh.position.set(10,27,-135)
        signs.push(mesh);
-       console.log(signs.length);
+       console.log(signs.length + " item in the Signs array");
        scene.add(mesh);
 
      /* 
