--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@ function clicked(event){
     if (intersects.length > 0 ){
       if(!intersects[0].object.userData.URL == 0)
       window.open(intersects[0].object.userData.URL);
+      //alert(intersects[0].object.userData.URL);
     }
 }
 function animate() {
