--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ function keyUp(e){
 var raycaster = new THREE.Raycaster();
 var mouse = new THREE.Vector2();
 
-//Mus-klick event, ej klar då den inte separerar på objekten
+//Mus-klick event
 function clicked(event){
     event.preventDefault();
 
