--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="index.css">
     <script src="/OrbitControls.js"></script>
     <script src="/three.min.js"></script>
     <script src="/js/index.js"></script>
