--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="index.css">
     <script src="/OrbitControls.js"></script>
     <script src="/three.min.js"></script>
-    <script src="/js/index.js"></script>
     <title>Three.js - City -  GLTF</title>
    
   </head>
@@ -72,10 +71,10 @@ function main() {
   scene.background = new THREE.Color('grey');
 
   let materialArray = [];
-  let texture_ft = new THREE.TextureLoader().load('/divine_ft.jpg');
-  let texture_bk = new THREE.TextureLoader().load('/divine_bk.jpg');
-  let texture_up = new THREE.TextureLoader().load('/divine_up.jpg');
-  let texture_dn = new THREE.TextureLoader().load('/divine_dn.jpg');
+  let texture_ft = new THREE.TextureLoader().load('/images/skybox/divine_ft.jpg');
+  let texture_bk = new THREE.TextureLoader().load('/images/skybox/divine_bk.jpg');
+  let texture_up = new THREE.TextureLoader().load('/images/skybox/divine_up.jpg');
+  let texture_dn = new THREE.TextureLoader().load('/images/skybox/divine_dn.jpg');
   let texture_rt = new THREE.TextureLoader().load('/images/skybox/divine_rt.jpg');
   let texture_lf = new THREE.TextureLoader().load('/images/skybox/divine_lf.jpg');
   
