--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@ function main() {
   scene.background = new THREE.Color('grey');
 
   let materialArray = [];
-  let texture_ft = new THREE.TextureLoader().load('/images/skybox/divine_ft.jpg');
-  let texture_bk = new THREE.TextureLoader().load('/images/skybox/divine_bk.jpg');
-  let texture_up = new THREE.TextureLoader().load('/images/skybox/divine_up.jpg');
-  let texture_dn = new THREE.TextureLoader().load('/images/skybox/divine_dn.jpg');
-  let texture_rt = new THREE.TextureLoader().load('/images/skybox/divine_rt.jpg');
-  let texture_lf = new THREE.TextureLoader().load('/images/skybox/divine_lf.jpg');
+  let texture_ft = new THREE.TextureLoader().load('/divine_ft.jpg');
+  let texture_bk = new THREE.TextureLoader().load('/divine_bk.jpg');
+  let texture_up = new THREE.TextureLoader().load('/divine_up.jpg');
+  let texture_dn = new THREE.TextureLoader().load('/divine_dn.jpg');
+  let texture_rt = new THREE.TextureLoader().load('/divine_rt.jpg');
+  let texture_lf = new THREE.TextureLoader().load('/divine_lf.jpg');
   
   materialArray.push(new THREE.MeshBasicMaterial({map: texture_ft}));
   materialArray.push(new THREE.MeshBasicMaterial({map: texture_bk}));
