--- a/index.html
+++ b/index.html
@@ -371,23 +371,16 @@ var signs= [];
     var a_rotation = camera.rotation.y;
     //walking events
   
-	if (keyboard[65]) { // A key go left
+	if (keyboard[37]) { // Left Arrow go left
     a_rotation = camera.rotation.y += Math.PI/50;
-    //camera.position.x -= Math.sin(camera.rotation.y + Math.PI / 2);
-		//camera.position.z -= -Math.cos(camera.rotation.y + Math.PI / 2);
     console.log("A (left) clicked");
 	}
-	if (keyboard[68]) { // D key  go right
+	if (keyboard[39]) { // Right Arrow  go right
     a_rotation = camera.rotation.y -= Math.PI/50;
-    //camera.position.x += Math.sin(camera.rotation.y + Math.PI / 2);
-		//camera.position.z += -Math.cos(camera.rotation.y + Math.PI / 2);
     console.log("D (right) clicked");
 	}
   if (keyboard[87]) { // W key go forward
   camera.position.set(+walker.speed, a_rotation,0);
-  /* 
-		camera.position.x += Math.sin(a_rotation) * walker.speed;
-		camera.position.z += -Math.cos(a_rotation) * walker.speed;  */
     console.log("W clicked");
 	}
 	if (keyboard[83]) { // S key go back
@@ -408,15 +401,6 @@ var signs= [];
       camera.position.x += Math.sin(camera.rotation.y + Math.PI / 2) * walker.speed;
 		camera.position.z += -Math.cos(camera.rotation.y + Math.PI / 2) * walker.speed;
     console.log("R arrow clicked");
-	} 
-  
-   if(keyboard[38]){ // top arrow key
-		camera.position.y += walker.turn * 2;
-    console.log("Tilt Up clicked");
-	}
-	if(keyboard[40]){ // bottom arrow key
-		camera.position.y -= walker.turn * 2;
-    console.log("Tilt Down clicked");
 	} 
  */
     renderer.render(scene, camera);
