--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@ function main() {
   var scen6 = gltfLoader.load(models["ship"].url, (gltf) => {
     var root = gltf.scene;
     root.position.set(-300,-7,-200);
-    root.scale.set(0.02, 0.02, 0.02);
+    root.scale.set(0.015, 0.015, 0.015);
     scene.add(root);
     root = ship;
-
   });
+   scen6 = ship;
   var scen6 = gltfLoader.load(models["sjoboden"].url, (gltf) => {
     var root = gltf.scene;
     root.position.set(-250,-5,-220);
