Comment out SeaHouse

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ function main() {
     var root = gltf.scene;
     root.position.set(-250,-5,-220);
     root.scale.set(0.01, 0.01, 0.01);
-    scene.add(root);
+    //scene.add(root);
 
   });
 }
