--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@ function main() {
 
   var scen7 = gltfLoader.load(models["house"].url, (gltf) => {
     var root = gltf.scene;
-    root.position.set(-250,-5,-220);
-    //root.rotation.x = Math.PI/2;
+    root.position.set(-265,-5,-220);
+    root.rotation.y -= Math.PI*3.3;
     root.scale.set(0.5, 0.5, 0.5);
     scene.add(root);
   });
