--- a/index.html
+++ b/index.html
@@ -174,6 +174,14 @@ function main() {
 
     scene.add(root);
   });
+  var scen6b = gltfLoader.load(models["ship"].url, (gltf) => {
+    var root = gltf.scene;
+    root.position.set(-300,-7,-120);
+    root.scale.set(0.015, 0.015, 0.015);
+    root.rotation.y -= Math.PI/2;
+
+    scene.add(root);
+  });
   var scen7 = gltfLoader.load(models["house"].url, (gltf) => {
     var root = gltf.scene;
     root.position.set(-265,-5,-225);
