--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ function main() {
     //https://www.essingebatsallskap.se/
     crate.position.set(-345, 22, -225);
     crate.receiveShadow = true;
-    signs.push(crate);
+    //signs.push(crate);
     scene.add(crate);
 
   
