--- a/index.html
+++ b/index.html
@@ -612,6 +612,7 @@ function animate() {
   renderer.render(scene,camera);
   requestAnimationFrame(animate);
   crate.rotation.y -=0.05;
+  sanoCrate.rotation.y -= 0.05;
 
  
   /* 
