--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ var camDef = {
   far: 10000
 };
 
-var scene, camera, renderer, flag, ship, ebs_box, crate;
+var scene, camera, renderer, flag, ship, ebs_box, crate, sanoCrate;
 var scenInd= [];
 
 window.addEventListener('resize', function () {
