--- a/index.html
+++ b/index.html
@@ -544,20 +544,20 @@ var signs= [];
     //walking events
   
 	if (keyboard[37]) { // Left Arrow go left
-    a_rotation = camera.rotation.y += Math.PI/50;
+    //a_rotation = camera.rotation.y += Math.PI/50;
     console.log("A (left) clicked");
 	}
 	if (keyboard[39]) { // Right Arrow  go right
-    a_rotation = camera.rotation.y -= Math.PI/50;
+    //a_rotation = camera.rotation.y -= Math.PI/50;
     console.log("D (right) clicked");
 	}
   if (keyboard[87]) { // W key go forward
-  camera.position.set(+walker.speed, a_rotation,0);
+  //camera.position.set(+walker.speed, a_rotation,0);
     console.log("W clicked");
 	}
 	if (keyboard[83]) { // S key go back
-		camera.position.x -= Math.sin(camera.rotation.y) * walker.speed;
-		camera.position.z -= -Math.cos(camera.rotation.y) * walker.speed;
+		//camera.position.x -= Math.sin(camera.rotation.y) * walker.speed;
+		//camera.position.z -= -Math.cos(camera.rotation.y) * walker.speed;
     console.log("S clicked");
 		
 	}
